--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p>Ann Arbor, MI 48104</p>
         <p>248-662-7330</p>
         <p>sudhirv@umich.edu</p><br>
-        <p class="rela-block social github"><a href = "http://github.com/sudhirv1">GitHub</a></p>
+        <p class="rela-block social GitHub"><a href = "http://github.com/sudhirv1">GitHub</a></p>
         <p class="rela-block social linked-in"><a href = "http://linkedin.com/in/sudhir-venkat">Connect With Me</a></p>
         <p class="rela-block caps side-header">Education</p>
         <p class="rela-block list-thing">B.S. Computer Science</p>
